@@ -2030,15 +2030,17 @@ function renderIPAddressPortForwarding ($object_id=0)
 	echo "<input type=hidden name=tab value='${tabno}'>\n";
 	echo "<tr align='center'><td colspan=2>";
 	printSelect (readChapter ('Protocols'), 'proto');
-	echo "<select name='localip'>";
+	echo "<select name='localip' tabindex=1>";
 
 	foreach ($addresses as $addr)
 		echo "<option value='${addr['ip']}'>" . (empty ($addr['name']) ? '' : "${addr['name']}: ") .
 			"${addr['ip']}" . (empty ($addr['address_name']) ? '' : " (${addr['address_name']})") . "</option>";
 
-	echo "</select>:<input type='text' name='localport' size='4'></td><td><input type='text' name='remoteip' id='remoteip' size='10'>";
+	echo "</select>:<input type='text' name='localport' size='4' tabindex=2></td>";
+	echo "<td><input type='text' name='remoteip' id='remoteip' size='10' tabindex=3>";
 	echo "<a href='javascript:;' onclick='window.open(\"${root}/find_object_ip_helper.php\", \"findobjectip\", \"height=700, width=400, location=no, menubar=no, resizable=yes, scrollbars=no, status=no, titlebar=no, toolbar=no\");'><img src='${root}/pix/find.png' title='Find object' border=0 height=16 width=16></a>";
-	echo ":<input type='text' name='remoteport' size='4'></td><td></td><td colspan=1><input type='text' name='description' size='20'> <input type='submit' value='Create Forwarding'></td></tr>";
+	echo ":<input type='text' name='remoteport' size='4' tabindex=4></td><td></td>";
+	echo "<td colspan=1><input type='text' name='description' size='20' tabindex=5> <input type='submit' value='Create Forwarding' tabindex=6></td></tr>";
 	echo "</form>";
 
 	echo "</table><br><br>";
