@@ -5,6 +5,7 @@
 	bugfix: rowspan attribute was computed incorrectly sometimes
 	update: Live VLANs color legend now distinguishes between 1 and 0
 		MAC addresses on a port
+	update: fixed tabindex in NATv4 rules form
 0.14.8 2007-12-22
 	bugfix: adjusted hardcoded values in VLAN trigger
 	bugfix: adjusted HW, SW and port types in SNMP data collector
